# bones-seed-parser

./: .gitignore  README.md  cli.py  converter.py  gui.py  gui_v0.py  pyproject.toml
bones_seed_parser/: __init__.py  cli.py  gui.py  parser.py
bones_seed_parser/themes/: default.css  github.css
bones_seed_parser/viewer/: index.html  viewer.js
themes/: vscode.css
web/: gen_web_data.py  index.html
web/themes/: default.css  github.css  vscode.css
